k8s/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-docs
  namespace: joledev-vpn
  labels:
    app: vpn-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-docs
  template:
    metadata:
      labels:
        app: vpn-docs
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: nginx
          image: ghcr.io/joledev/joledev-vpn-docs:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "32Mi"
              cpu: "50m"
