k8s/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-docs
  namespace: joledev-vpn
spec:
  selector:
    app: vpn-docs
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
